# Artificial-Intelligence-Game-Engine

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  MCP_SERVER_GUIDE.md  engine_plan.md  engine_roadmap.md  pmpt.txt  readme.md  vcpkg.json
Core/: Application.cpp  Application.h  Assert.h  CrashHandler.cpp  CrashHandler.h  Event.h  Input.cpp  Input.h  InputMapper.cpp  InputMapper.h  Log.cpp  Log.h  Profile.h  Window.cpp  Window.h
Core/AI/BehaviorTree/: BTComposites.h  BTDecorators.h  BTLeaves.h  BehaviorTree.h  BehaviorTreeBuilder.h  BehaviorTreeContainer.h  BehaviorTreeDebug.h  BehaviorTreeManager.h  Blackboard.h
Core/Animation/: AnimationRuntimeTypes.h
Core/Asset/: AssetCooker.cpp  AssetCooker.h  AssetLoader.cpp  AssetLoader.h  AssetPipeline.cpp  AssetPipeline.h  AssetTypes.h
Core/Audio/: AudioListenerSystem.h  AudioSourceSystem.h  AudioSystem.cpp  AudioSystem.h  PhysicsAudioIntegration.cpp  PhysicsAudioIntegration.h  ReverbZoneSystem.h
Core/Audit/: FieldAuditReportWriter.cpp  FieldAuditReportWriter.h  FieldAuditRunner.cpp  FieldAuditRunner.h  FieldAuditTypes.h  FieldInventoryService.cpp  FieldInventoryService.h  FieldIssueLedger.cpp  FieldIssueLedger.h  FieldRemediationBacklog.cpp  FieldRemediationBacklog.h  FieldValidationService.cpp  FieldValidationService.h
Core/Automation/: AutomationTypes.h  PerformanceTestRunner.cpp  PerformanceTestRunner.h  PlayModeTestRunner.cpp  PlayModeTestRunner.h
Core/Diagnostics/: CPUProfilerCapture.cpp  CPUProfilerCapture.h  GPUProfilerCapture.cpp  GPUProfilerCapture.h  ProfilerCaptureTypes.h  TraceExporter.cpp  TraceExporter.h
Core/Dialogue/: Dialogue.h
Core/ECS/: Entity.cpp  Entity.h  ParallelECS.cpp  ParallelECS.h  Scene.cpp  Scene.h
Core/Editor/: EditorAPI.cpp  EditorAPI.h  EditorContext.h  EditorModule.cpp  EditorModule.h  EditorSelection.cpp  EditorSelection.h  EditorState.h  Result.h
Core/Events/: Event.h  EventBus.h  GameplayEvents.h
Core/Gameplay/: Inventory.h  Item.h  Quest.h
Core/JobSystem/: JobSystem.cpp  JobSystem.h
Core/MCP/: ActionValidator.h  AutoLevelDesigner.h  HttpServer.cpp  HttpServer.h  JsonSerialization.h  MCPAllTools.h  MCPAnimationTools.h  MCPAudioTools.h  MCPGameplayTools.h  MCPNavigationTools.h  MCPNetworkTools.h  MCPParticleTools.h  MCPPhysicsTools.h  MCPPostProcessTools.h  MCPRayTracingTools.h  MCPSceneTools.h  MCPServer.cpp  MCPServer.h  MCPTool.h  MCPTypes.h  MCPUITools.h  MCPWorldTools.h  SceneSerialization.h
Core/Math/: Math.h
Core/Memory/: Allocator.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h
Core/Navigation/: CrowdManager.cpp  CrowdManager.h  NavMeshBuilder.cpp  NavMeshBuilder.h  NavMeshDebugDraw.cpp  NavMeshDebugDraw.h  NavMeshManager.cpp  NavMeshManager.h  NavigationConfig.h  NavigationSystem.cpp  NavigationSystem.h  TileCacheManager.cpp  TileCacheManager.h
Core/Network/: ClientPredictionSystem.cpp  ClientPredictionSystem.h  ClientReplicationSystem.cpp  ClientReplicationSystem.h  MultiplayerProductLayer.cpp  MultiplayerProductLayer.h  MultiplayerRuntimeFeatures.cpp  MultiplayerRuntimeFeatures.h  NetworkClient.cpp  NetworkClient.h  NetworkContractState.cpp  NetworkContractState.h  NetworkHash.h  NetworkManager.cpp  NetworkManager.h  NetworkPackets.h  NetworkServer.cpp  NetworkServer.h  ServerReconciliationSystem.cpp  ServerReconciliationSystem.h  ServerReplicationSystem.cpp  ServerReplicationSystem.h
Core/Physics/: EngineJobSystemAdapter.cpp  EngineJobSystemAdapter.h  PhysicsLayers.cpp  PhysicsLayers.h  PhysicsWorld.cpp  PhysicsWorld.h
Core/RHI/: PipelineCacheManager.cpp  PipelineCacheManager.h  RHIBuffer.h  RHICommandList.h  RHIDevice.h  RHIPipelineState.h  RHIRayTracing.h  RHIRenderPass.h  RHIResourceUploader.h  RHISampler.h  RHITexture.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderPermutationLibrary.cpp  ShaderPermutationLibrary.h
Core/Remediation/: FieldClosureService.cpp  FieldClosureService.h  FieldClosureTypes.h  FieldGuardrailService.cpp  FieldGuardrailService.h  FieldGuardrailTypes.h  FieldMigrationService.cpp  FieldMigrationService.h  FieldMigrationTypes.h  FieldSchemaPatchService.cpp  FieldSchemaPatchService.h  FieldSchemaPatchTypes.h  RuntimeFieldFixService.cpp  RuntimeFieldFixService.h  RuntimeFieldFixTypes.h
Core/Renderer/: AccelerationStructureBuilder.h  DynamicResolution.cpp  DynamicResolution.h  ForwardPlus.cpp  ForwardPlus.h  FrustumCulling.cpp  FrustumCulling.h  GPUSkinning.cpp  GPUSkinning.h  GlobalIllumination.cpp  GlobalIllumination.h  Mesh.cpp  Mesh.h  RTReflectionPass.cpp  RTReflectionPass.h  RTShadowPass.cpp  RTShadowPass.h  RayTracingManager.cpp  RayTracingManager.h  ShadowPass.cpp  ShadowPass.h  TAASystem.cpp  TAASystem.h  ZPrepass.cpp  ZPrepass.h
Core/Scripting/: LuaEngine.h
Core/Security/: PathValidator.h
Core/State/: SaveFile.cpp  SaveFile.h  SaveManager.cpp  SaveManager.h  SceneLoader.cpp  SceneLoader.h  TransitionManager.cpp  TransitionManager.h
Core/UI/: Anchoring.h  FontAtlas.cpp  FontAtlas.h  ImGuiSubsystem.cpp  ImGuiSubsystem.h  TextRenderer.cpp  TextRenderer.h  UIManager.cpp  UIManager.h
Core/World/: OpenWorldRuntime.cpp  OpenWorldRuntime.h
Shaders/: aces_tonemapping.glsl  atmospheric_sky.frag  atmospheric_sky.vert  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  cloth_compute.comp.glsl  color_grading.frag  depth_of_field.frag  drs_upscale.comp  foliage.frag  foliage.vert  foliage_scatter.comp  frustum_cull.comp  fullscreen_quad.vert  light_culling.comp  motion_blur.frag  motion_vectors.frag  motion_vectors.vert  msdf_text.frag  msdf_text.vert  particle.frag  particle.vert  particle_emit.comp  particle_sort.comp  particle_update.comp  pbr.frag  pbr.vert  post_process_common.glsl  shadow.frag  shadow.vert  skinned_motion_vectors.vert  skinned_pbr.frag  skinned_pbr.vert  skinned_shadow.vert  skinning.comp  ssao.frag  ssao_blur.frag  taa_resolve.comp
Shaders/RayTracing/: rt_gi.rchit.glsl  rt_gi.rgen.glsl  rt_gi.rmiss.glsl  rt_reflection.rchit.glsl  rt_reflection.rgen.glsl  rt_reflection.rmiss.glsl  rt_shadow.rgen.glsl  rt_shadow.rmiss.glsl  ssgi.comp.glsl
src/: main.cpp
(+309 files in other folders)
